2012-11-16:
* Script was updated: small fix in tr_sync option.
* Isratine Citizen is now in Hebrew translation team.

2012-11-12:
* Script was updated: fixed a typo.

2012-10-17:
* Script was updated:
  - new format of command line option tr_push
  - fixed offline work

2012-10-14:
* Added non-translated localization file for Hebrew translation.

2012-10-12:
* Scripts was updated:
  fixed determination of CUR_DIR variable when absolute path is used.

2012-10-11:
* Script was updated:
  - added new command line option tr_sync
  - test Internet connection

2012-10-05:
* Added non-translated localization file for Arabic translation.

2012-09-26:
* Script was updated:
  - Git repo was moved to new location (https://github.com/psi-plus)
  - psi-plus-i18n was renamed to psi-plus-l10n

2012-08-24:
* Script was updated: added new command line option tr_push.

2012-06-27:
* Jiri Slaby is now in Czech translation team.

2012-05-24:
* Vitaly Tonkacheyev is now in Ukrainian translation team.

2012-05-10:
* edasmax is now in Polish translation team.

2012-04-06:
* Michal Hrušecký is now in Czech translation team.

2012-04-02:
* Erik-B. Ernst is now in German translation team.
* Benjamin Weber is now in German translation team.
* Márk Lutring is now in Hungarian translation team.
* Guillermo Castellá is now in Spanish translation team.
* Pavał Šałamicki is now in Belarusian translation team.
* Miroslav Petrovic is now in Serbian (Latin) translation team.

2012-03-24:
* Repository was created.
* Added old translations from Psi IM which were updated using actual sources
  of Psi+.
* Russian translation of Psi+ was taken from special repository
  (https://github.com/ivan101/psi-plus-ru)