@@ -3,7 +3,7 @@
 # Author:  Boris Pek <tehnick-8@mail.ru>
 # License: GPLv2 or later
 # Created: 2012-03-24
-# Updated: 2012-11-16
+# Updated: 2013-01-13
 # Version: N/A
 
 if [[ ${0} =~ ^/.+$ ]]; then
@@ -79,7 +79,11 @@ case "${1}" in
 
     tar -cJf psi-plus_translations_${CUR_TAG}.tar.xz psi-plus_translations_${CUR_TAG} || exit 1
     echo "Tarball with precompiled translation files is ready for upload:"
-    echo "https://github.com/psi-plus/psi-plus-l10n/downloads"
+    echo "https://code.google.com/p/psi-dev/downloads/list?q=label:Translations"
+    echo "Summary:"
+    echo "Precompiled localization files for Psi+ >= ${CUR_TAG}"
+    echo "Labels:"
+    echo "Archive Translations"
 
 ;;
 "tr")
